# X-Ray_Serial_Console

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.en-US.md  README.md  README.zh-CN.md
docs/: design.md  packaging-windows.md  pitfalls.md
docs/skills/qt-widgets-cpp/: SKILL.md
include/: appsettings.h  appversion.h  mainwindow.h  multistringdock.h  serialportworker.h  toolboxdialog.h
resources/: resources.qrc
scripts/: build-local.ps1  package-windows.bat  package-windows.ps1  syntax-check.ps1
src/: appsettings.cpp  main.cpp  mainwindow.cpp  multistringdock.cpp  serialportworker.cpp  toolboxdialog.cpp
